test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_multiplicity/src/payable_attr.sw
library;

abi Abi {
    #[payable]
    fn ok();

    #[payable]
    #[payable, payable]
    #[payable]
    fn not_ok();
}